--- a/definiciones.html
+++ b/definiciones.html
@@ -18,7 +18,7 @@
 }
 
 .cuerpoprincipal h1{
-    background-color: var(--clr-blue);
+    background-color: var(--clr-primary);
     color: var(--clr-white);
     font-size: 2.5em;
     padding: 0.8em;
@@ -26,7 +26,7 @@
 }
 
 .cuerpoprincipal h2{
-    color: var(--clr-blue);
+    color: var(--clr-primary);
     background-color: var(--clr-white);
     border-bottom: 3px solid;
     font-size: 1.8em;
@@ -36,7 +36,7 @@
 }
 
 .cuerpoprincipal  h3{
-    color: var(--clr-blue);
+    color: var(--clr-primary);
     background-color: var(--clr-white);
     border-bottom: 3px solid;
     font-size: 1.3em;
